--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ITS</string>
     <string name="ITS">Institute of Technology Sligo</string>
-    <string name="button_text">Our Website</string>
+    <string name="button_website">Our website</string>
     <string name="address">IT Sligo address</string>
 </resources>
