--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_website">Our website</string>
     <string name="details">Institute of Technology Sligo is a state-funded third-level educational institution situated in the town of Sligo, Ireland. The Institute has three Schools and nine Departments.</string>
     <string name="address">Address: Ash Ln, Bellanode, Sligo, Ireland</string>
+    <string name="email">admissions@itsligo.ie </string>
 </resources>
